@@ -24,6 +24,7 @@ redraw.png
 fes.png
 network.png
 find.png
+filter.png
 config.png
 newnet.png
 newrun.png
