@@ -104,6 +104,6 @@ to the lib/ and bin/ subdirs.
 
 The Tcl/Tk environment is using the native Aqua version of Tcl/Tk, so you 
 will see native widgets. However, due to problems in the Tk/Aqua port,
-you may experience focus problems and other other UI quirks. We are aware
+you may experience focus problems and other UI quirks. We are aware
 of these problems, but have not found a workaround yet.
 
