@@ -318,6 +318,19 @@ set icons(find) [image create photo -data {
     naQAAAAASUVORK5CYII=
 }]
 
+set icons(filter) [image create photo -data {
+    iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAAAXNSR0IArs4c6QAA
+    AARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAA
+    OpgAABdwnLpRPAAAAAlwSFlzAAAOwwAADsMBx2+oZAAAABh0RVh0U29mdHdhcmUA
+    UGFpbnQuTkVUIHYzLjA39c2BcAAAAPZJREFUOE9jYKAV+P//PwMlGMNd2AzLL2sB
+    CiMsKm+ZhcJHliPaQN+oWLghJBno17/3f0j35v8xrUv/p9ZO+Q9yHQzDDCXJQFxe
+    RnZheEoN5V5GtsjCBeL9vS1i/0GY5DDEFesgw/79fY9iKFGRsqtB9D8y3gnlg2iQ
+    gSC8q1EU7FKCBm6tEv7/99MxKD7+/+9HIBuEPwHZIPGPCLEt1cKYJmLz3voS4f/r
+    SoT+rysV+r8ehEFsoBiI/efZPDBeXypMnAvx5ZqV+YJgw0A0TB1BL4MUoucUWCwv
+    yxb4D8IkxzLIQLLT4YDkFKpkPbJLG1qVsxSbCwCEgN1oUjcSBAAAAABJRU5ErkJg
+    gg==
+}]
+
 set icons(config) [image create photo -data {
     iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAAAXNSR0IArs4c6QAA
     AARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAA
